--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ python:
   - "2.6"
   - "2.7"
   - "3.2"
-# command to install dependencies
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libgpgme11-dev
 install:
-  - "pip install -r requirements.txt --use-mirrors"
-# command to run tests
+  - pip install -r requirements.txt --use-mirrors
 script: nosetests
