--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,7 @@ before_install:
   - sudo apt-get install -qq libgpgme11-dev
 install:
   - pip install -r requirements.txt --use-mirrors
-script: nosetests
+script:
+  - nosetests
+after_script:
+  - pylint zeyple -f colorized
