--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ script:
   - nosetests
 after_script:
   - pylint zeyple -f colorized
+notifications:
+  email:
+    on_success: always
+    on_failure: always
