--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.2"
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libgpgme11-dev
+  - sudo apt-get install -qq libgpgme11-dev pylint
 install:
   - pip install -r requirements.txt --use-mirrors
 script:
