--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ python:
   - "2.6"
   - "2.7"
   - "3.2"
+  - "3.3"
+  - "3.4"
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgpgme11-dev pylint
 install:
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements.txt
 script:
   - nosetests
 after_script:
