Update release notes and examples for v1.0.0

--- a/zeyple/zeyple.conf.example
+++ b/zeyple/zeyple.conf.example
@@ -2,12 +2,9 @@
 log_file = /var/log/zeyple.log
 
 [gpg]
-home = /etc/zeyple/keys
+home = /var/lib/zeyple/keys
 
 [relay]
 host = localhost
 port = 10026
-
-[aliases]
-#root@myserver.com = gpgaddress@mail.org
 
