--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "3.2"
   - "3.3"
   - "3.4"
+  - "pypy"
+  - "pypy3"
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgpgme11-dev pylint
