--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: python
 python:
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "pypy"
-  - "pypy3"
+  - 2.7
+  - 3.2
+  - 3.3
+  - 3.4
+  - pypy
+  - pypy3
+matrix:
+  allow_failures:
+    - python: 3.3
+    - python: 3.4
+    - python: pypy
+    - python: pypy3
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgpgme11-dev pylint
