--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [tox]
 envlist = py27, py33, py34, py35, pypy, pypy3
+skip_missing_interpreters = True
 skipsdist = True
 
 [testenv]
 deps = -rrequirements.txt
 commands =
+    pep8 --show-pep8 zeyple
     nosetests --with-coverage --cover-html --cover-package=zeyple
