Switch to py.test

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ skipsdist = True
 
 [testenv]
 deps = -rrequirements.txt
+setenv =
+    PYTHONPATH = {toxinidir}
 commands =
     pep8 --show-pep8 zeyple
-    nosetests --with-coverage --cover-html --cover-package=zeyple
+    py.test {posargs:--cov-report=html --cov=zeyple/}
