--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ before_install:
 install:
   - pip install -r requirements.txt
 script:
-  - nosetests
+  - PYTHONPATH=. py.test
 after_script:
   - pylint zeyple -f colorized -r no
