--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pygpgme==0.3
-six==1.9.0
-pytest==2.7.2
-pytest-cov==1.8.1
-mock==1.0.1
-coverage==3.7.1
-tox==2.1.1
-pep8==1.6.2
-pylint==1.4.3
+six>=1.10.0
+pytest>=3.0.4
+pytest-cov>=2.4.0
+mock>=2.0.0
+coverage>=4.2
+tox>=2.5.0
+pep8>=1.7.0
+pylint>=1.6.4
