--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, py36, pypy, pypy3
+envlist = py27, py36, pypy, pypy3
 skip_missing_interpreters = True
 skipsdist = True
 
