Replace pep8 with pycodestyle

--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,5 @@ deps = -rrequirements.txt
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
-    pep8 --show-pep8 zeyple
+    pycodestyle --show-pep8 zeyple
     py.test {posargs:--cov-report=html --cov=zeyple/}
