--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: xenial # https://github.com/travis-ci/travis-ci/issues/9831
 python: # XXX: keep in sync with tox.ini
   - 2.7
   - 3.7
