--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgpgme11-dev pylint
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements_gpgme.txt
 script:
   - PYTHONPATH=. py.test
 after_script:
