--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skip_missing_interpreters = True
 skipsdist = True
 
 [testenv]
-deps = -rrequirements.txt
+deps = -rrequirements_gpgme.txt
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
