Refactor Zeyple for Python 3

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py27, py37, pypy, pypy3
+envlist = py311, py312, pypy3
 skip_missing_interpreters = True
 skipsdist = True
 
 [testenv]
-deps = -rrequirements_gpgme.txt
+deps = -rrequirements.txt
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
